Handing over to Deiverson

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			<li class="fright"><a href="#About">About</a></li>
 		</nav>
 		
-		<main><p>Vivamus egestas dolor sed libero mattis facilisis. Aliquam porttitor mauris ut gravida venenatis. Vestibulum viverra dignissim ex, id pulvinar elit viverra vitae. Fusce mattis, eros sit amet fermentum vestibulum, nibh ex lobortis eros, eget fermentum est lectus ac nibh. Quisque at tempus turpis. Donec volutpat ultricies leo vel tempor. Nulla a congue quam.</p>
+		<main><p>Deiverson vai cuidar isso. egestas dolor sed libero mattis facilisis. Aliquam porttitor mauris ut gravida venenatis. Vestibulum viverra dignissim ex, id pulvinar elit viverra vitae. Fusce mattis, eros sit amet fermentum vestibulum, nibh ex lobortis eros, eget fermentum est lectus ac nibh. Quisque at tempus turpis. Donec volutpat ultricies leo vel tempor. Nulla a congue quam.</p>
 			<hr>
 			<div class="row">
 				<div class="minor-col colformat2"><h1>Articles</h1><hr>
