--- a/kitkat.html
+++ b/kitkat.html
@@ -41,13 +41,13 @@
 					<div class="sidecol"><h2>About Me</h2>
 						<div class="card">
 						<div class="fakeimg">
-							<img src="w3images/chico-fluff1.jpeg" alt="fluffy looking chico" style="width:100%;">
+							<img src="w3images/bob-walker-wqyjvlpXwxc-unsplash.jpg" alt="fluffy looking chico" style="width:100%;">
 						</div>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec at tempus massa. Donec posuere tincidunt nisi pretium ornare. Curabitur mollis tincidunt nibh at luctus. Sed consequat dolor a nibh pellentesque, laoreet fringilla sem porttitor. Donec neque mi, laoreet vitae malesuada at, pulvinar ac nulla. Pellentesque elementum imperdiet velit, id scelerisque velit consectetur id. Integer non porta dolor. Donec lobortis erat id volutpat vestibulum. Vestibulum sodales urna vel tempus lobortis. Ut efficitur at quam eu ultrices. Aenean tristique velit at tortor consectetur consectetur. Sed at enim tellus. Morbi et fermentum tortor. Vestibulum imperdiet turpis sit amet tortor scelerisque aliquam. Sed scelerisque molestie nulla eu iaculis. Cras quis porttitor magna.</p>
 						</div>
 						<div class="card"><h2>More About Me</h2>
 						<div class="fakeimg">
-							<img src="w3images/chico-spying-the-land.jpeg" alt="chico spying out the land"  style="width:100%;">
+							<img src="w3images/holger-link-K7yZ-CsDvRU-unsplash.jpg" alt="chico spying out the land"  style="width:100%;">
 						</div>
 							<p>Vivamus egestas dolor sed libero mattis facilisis. Aliquam porttitor mauris ut gravida venenatis. Vestibulum viverra dignissim ex, id pulvinar elit viverra vitae. Fusce mattis, eros sit amet fermentum vestibulum, nibh ex lobortis eros, eget fermentum est lectus ac nibh. Quisque at tempus turpis. Donec volutpat ultricies leo vel tempor. Nulla a congue quam.</p>
 						</div>
@@ -59,10 +59,8 @@
 							<img src="w3images/wedding.jpg" style="width:100%">
 							<img src="w3images/rocks.jpg" style="width:100%">
 							<img src="w3images/falls2.jpg" style="width:100%">
-							<img src="w3images/paris.jpg" style="width:100%">
-							<img src="w3images/nature.jpg" style="width:100%">
-							<img src="w3images/mist.jpg" style="width:100%">
-							<img src="w3images/paris.jpg" style="width:100%">
+							<img src="w3images/yawn.jpg" style="width:100%">
+							<img src="w3images/jetblack.jpg" style="width:100%">
 						</div>
 						<div class="column">
 							<img src="w3images/underwater.jpg" style="width:100%">
@@ -71,15 +69,14 @@
 							<img src="w3images/mountainskies.jpg" style="width:100%">
 							<img src="w3images/rocks.jpg" style="width:100%">
 							<img src="w3images/underwater.jpg" style="width:100%">
+							<img src="w3images/mist.jpg" style="width:100%">
 						</div>  
 						<div class="column">
 							<img src="w3images/wedding.jpg" style="width:100%">
 							<img src="w3images/rocks.jpg" style="width:100%">
 							<img src="w3images/falls2.jpg" style="width:100%">
-							<img src="w3images/paris.jpg" style="width:100%">
-							<img src="w3images/nature.jpg" style="width:100%">
-							<img src="w3images/mist.jpg" style="width:100%">
-							<img src="w3images/paris.jpg" style="width:100%">
+							<img src="w3images/yawn.jpg" style="width:100%">
+							<img src="w3images/jetblack.jpg" style="width:100%">
 						</div>
 						<div class="column">
 							<img src="w3images/underwater.jpg" style="width:100%">
@@ -88,6 +85,7 @@
 							<img src="w3images/mountainskies.jpg" style="width:100%">
 							<img src="w3images/rocks.jpg" style="width:100%">
 							<img src="w3images/underwater.jpg" style="width:100%">
+							<img src="w3images/mist.jpg" style="width:100%">
 						</div>
 					</div>
 				</div>
